2012-02-28  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (numberp): Fix bad type check: null pointer dereference when
	object is nil.

	* match.c (do_match_line): Bugfix for incorrect treatment of long
	lines. Must return the absolute position from the start of the original
	line (plus(c->pos, c->base)), rather than just c->pos, which only
	measures from the start of a line that may have been chopped by
	consume_prefix.

2012-02-28  Kaz Kylheku  <kaz@kylheku.com>

	Bugfix: rlcp function was incorrect for new way of storing
	line number info.

	* parser.h (rlset): Declared.
	(rlcp): Use rlset.

	* parser.y (rlset): New function.

2012-02-28  Kaz Kylheku  <kaz@kylheku.com>

	* debug.c (help, debug): New g command for tweaking log level.

2012-02-28  Kaz Kylheku  <kaz@kylheku.com>

	* debug.c: Missing d command implemented.
	Condense the output to 8 times the screen width, for more context.
	Condense the output in vertical mode (when the entire input line
	is shown) not only character mode.

	* lib.c (remq, remql, remqual): New functions.

	* lib.h (remq, remql, remqual): Declared.

2012-02-29  Kaz Kylheku  <kaz@kylheku.com>

	Version 59

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2012-02-28  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (sub_list, replace_list, lazy_sub_str, sub_str, replace_str,
	sub_vec, replace_vec): Regression: replace incorrect zerop(to)
	test with to == zero, because to is not necessarily a number.

2012-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Recognize backslash-newline break in regexes.

2012-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Substantially revised for better lexical accuracy
	and highlighting of errors.

2012-02-27  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (extract): Check for negative value of opt_nobindings,
	which forces the printing.

	* txr.c (help): Under -b, mention that printing the  word false is